fix build error and overflow goose

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ form {
 
     p {
       max-width: 15em;
-      overflow: scroll;
+      overflow: hidden;
       color: lime;
     }
   }
@@ -192,7 +192,7 @@ section {
     max-width: 100%;
     text-align: left;
     margin: 0.5em 0em 0.5em 0em;
-    overflow: scroll;
+    overflow: hidden;
   }
 
   div {
